--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,8 @@
 remote_theme: pages-themes/dinky@v0.2.0
 plugins:
 - jekyll-remote-theme # add this line to the plugins list if you already have one
+
+collections:
+  notes:
+    output: true         # 生成 HTML 文件
+    permalink: /:path/   # 保持文件夹层级结构
