--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,10 @@
+remote_theme: pages-themes/dinky@v0.2.0
+plugins:
+- jekyll-remote-theme # add this line to the plugins list if you already have one
+
 collections:
   notes:
-    output: true         # 生成 HTML 文件
-    permalink: /:path/   # 保持文件夹层级结构
+    output: true  # 为集合中的文件生成独立页面
+    permalink: /:path/:title/  # URL 按文件路径和标题生成
+
+permalink: /:path/:title/
