--- a/_config.yml
+++ b/_config.yml
@@ -17,3 +17,6 @@ kramdown:
   syntax_highlighter_opts:
     css_class: 'highlight'  # 代码块 CSS 类名
     default_lang: text      # 未指定语言时的默认渲染
+
+head_scripts:
+  - /assets/css/custom.css  # 新增自定义样式
