--- a/_config.yml
+++ b/_config.yml
@@ -21,4 +21,6 @@ kramdown:
 head_scripts:
   - /assets/css/custom.css  # 新增自定义样式
 
-  
+# _config.yml
+baseurl: "/write-after-read"  # 保持此项配置
+url: "https://rouge3877.github.io"
